--- a/styles.css
+++ b/styles.css
@@ -222,6 +222,7 @@
         margin: 10px 0 0;
         font-size: 0.95rem;
         color: #6f4d58;
+        display: none;
       }
 
       .video-actions {
